--- a/2 - Die R-Umgebung/2 - Die R-Umgebung.Rmd
+++ b/2 - Die R-Umgebung/2 - Die R-Umgebung.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Einführung in R"
 author: "Clemens Brunner"
-date: "15.-16.12.2017"
+date: "16.-17.2.2018"
 output:
   html_document:
     fig_caption: no
@@ -32,15 +32,15 @@ Im CRAN gibt es tausende Pakete, und deswegen kann es mitunter schwierig sein, e
 
 Zur Paketverwaltung gibt es zwei Möglichkeiten: entweder man verwendet entsprechende Funktionen in den grafischen Oberflächen, oder man benutzt R-Befehle dafür (wobei die grafischen Oberflächen entsprechende R-Befehle im Hintergrund verwenden).
 
-### Verwaltung in RStudio
-RStudio bietet im Bereich *Packages* im Panel rechts unten eine Liste aller installierten Pakete. Hier ist auch ersichtlich, welche Pakete gerade aktiv sind (durch Setzen/Entfernen des Häkchens vor einem Paket kann dieses aktiviert/deaktiviert werden). In dieser Ansicht kann man durch Klicken auf *Update* installierte Pakete aktualisieren. Neue Pakete installiert man durch Klicken auf *Install*. Wenn man in das Feld *Packages* die Anfangsbuchstaben des gesuchten Pakets eingibt, wird automatisch eine Liste aller passenden Pakete vorgeschlagen. In RStudio gibt es allerdings keine Möglichkeit, eine Liste aller im CRAN vorhandenen Pakete anzuzeigen (aber man kann sich die Liste aller Pakete auch auf einer [Website](https://cran.r-project.org/web/packages/available_packages_by_name.html) anzeigen lassen).
+### Paketverwaltung in RStudio
+RStudio bietet im Bereich *Packages* im Panel rechts unten eine Liste aller installierten Pakete. Hier ist auch ersichtlich, welche Pakete gerade aktiviert sind (durch Setzen/Entfernen des Häkchens vor einem Paket kann dieses aktiviert/deaktiviert werden). In dieser Ansicht kann man durch Klicken auf *Update* installierte Pakete aktualisieren. Neue Pakete installiert man durch Klicken auf *Install*. Wenn man in das Feld *Packages* die Anfangsbuchstaben des gesuchten Pakets eingibt, wird automatisch eine Liste aller passenden Pakete vorgeschlagen.
 
 ```{r, fig.retina = NULL, echo=FALSE}
 knitr::include_graphics("RStudio_packages.png")
 ```
 
-### Verwaltung mit R-Befehlen
-Prinzipiell interagiert man mit R in der Konsole. Daher ist es nicht überraschend, dass auch die Paketverwaltung mit speziellen R-Befehlen funktioniert.
+### Paketverwaltung mit R-Befehlen
+Prinzipiell interagiert man mit R in der Console. Daher ist es nicht überraschend, dass auch die Paketverwaltung mit speziellen R-Befehlen funktioniert.
 
 Eine Liste aller installierten Pakete bekommt man mit:
 
@@ -54,10 +54,10 @@ Diese Liste entspricht der Darstellung im Bereich *Packages* in RStudio. Eine Li
 search()
 ```
 
-Ein neues Paket aus dem CRAN (z.B. `ggplot2`) installiert man mit:
+Ein neues Paket aus dem CRAN (z.B. `psych`) installiert man mit:
 
 ```{r eval=FALSE}
-install.packages("ggplot2")
+install.packages("psych")
 ```
 
 Zu beachten ist, dass man hier den Namen des zu installierenden Paketes in Anführungszeichen angeben muss. Ein bereits installiertes Paket aktiviert man mit:
@@ -66,41 +66,19 @@ Zu beachten ist, dass man hier den Namen des zu installierenden Paketes in Anfü
 library(psych)
 ```
 
-Hier kann man die Anführungszeichen um den Paketnamen weglassen. Eine Liste aller im CRAN verfügbaren Pakete erhält man mit:
-
-```{r eval=FALSE}
-available.packages()
-```
-
-Diese Liste ist so lang, dass sie nicht mehr komplett ausgegeben werden kann. Daher schreibt man die Ausgabe dieses Befehls am besten in eine Variable, welche man dann weiter bearbeiten kann (dazu aber später mehr).
+Hier kann man die Anführungszeichen um den Paketnamen weglassen.
 
 ### Häufig verwendete Pakete
 In dieser Veranstaltung werden wir einige Zusatzpakete verwenden, unter anderem:
 
 - `ggplot2`
 - `readr`
-- `foreign`
 - `psych`
 - `car`
 - `pastecs`
 - `reshape2`
 
 Ganz besonders zu empfehlen sind die Pakete aus dem sogenannten [Tidyverse](https://www.tidyverse.org/). Diese folgen der Philosophie von "tidy data" (d.h. Daten in einem speziellen "sauberen" Format) und können allesamt mit dem Meta-Paket `tidyverse` installiert werden.
-
-## Hilfe
-R bietet eine sehr gute integrierte Hilfe zu allen möglichen Themen und Befehlen. In RStudio sind im Bereich *Help* alle möglichen Hilfethemen gruppiert - es bietet sich an, einmal in diesem Hilfefenster zu stöbern. Am häufigsten benötigt man Hilfe zu einem konkreten Befehl. Wenn man z.B. Informationen zum Befehl `mean` benötigt, gibt man in der Konsole folgenden Befehl ein:
-
-```{r}
-help(mean)
-```
-
-Alternativ und kürzer geht das mit:
-
-```{r}
-?mean
-```
-
-Die meisten Hilfetexte sind sehr detailliert und hilfreich. Neben einer kurzen Zusammenfassung des Befehls wird auch die Verwendung demonstriert (d.h. wie man den Befehl in der Konsole eingibt, welche Argumente man übergeben muss, usw.). Sehr praktisch sind die Anwendungsbeispiele, die meistens ganz am Ende des Hilfetextes gezeigt werden.
 
 ## Die Programmiersprache R
 ### Scripts
@@ -118,22 +96,28 @@ n * (n + 1) / 2  # closed-form solution
 
 Wenn man in einem Script Befehle aus zusätzlichen Paketen benötigt, muss man diese Pakete im Script auch mittels `library(package)` aktivieren, am besten ganz am Anfang des Scripts. Es ist allerdings ratsam, die Installation von neuen Paketen mittels `install.packages("package")` _nicht_ in Scripts durchzuführen, da diese Pakete sonst bei jedem Ausführen des Scripts neu installiert werden.
 
+Unter Windows sollte man in RStudio einstellen, dass Scripts als UTF-8 geladen bzw. gespeichert werden sollen (unter macOS bzw. Linux ist das bereits standardmäßig der Fall). Dies kann man in den Optionen unter *Code* - *Saving* - *Default text encoding* durchführen:
+
+```{r, fig.retina = NULL, echo=FALSE}
+knitr::include_graphics("encoding.png")
+```
+
 ### Arbeitsverzeichnis
-Das Verzeichnis, in dem die aktuelle R-Sitzung ausgeführt wird, erhält man mit dem Funktionsaufruf:
+Das Arbeitsverzeichnis, also jenes Verzeichnis in dem die aktuelle R-Sitzung ausgeführt wird, erhält man mit dem Funktionsaufruf:
 ```{r, eval=FALSE}
 getwd()
 ```
-Dieses sogenannte Arbeitsverzeichnis (Working Directory) ist wichtig, da R Dateien (wie z.B. Scripts) immer in diesem Verzeichnis sucht. Der Titel der R-Console in RStudio zeigt übrigens auch das aktuelle Arbeitsverzeichnis an. Alle Dateien im aktuellen Arbeitsverzeichnis kann man mit `dir` anzeigen (RStudio zeigt diese rechts unten im Bereich *Files* an).
+Dieses sogenannte Arbeitsverzeichnis (Working Directory) ist wichtig, da R Dateien (wie z.B. Scripts) immer in diesem Verzeichnis sucht. Der Titel der R-Console in RStudio zeigt übrigens auch das aktuelle Arbeitsverzeichnis an. Alle Dateien im aktuellen Arbeitsverzeichnis kann man mit `dir()` anzeigen (RStudio zeigt diese rechts unten im Bereich *Files* an).
 
-Der Befehl `setwd` setzt das aktuelle Arbeitsverzeichnis auf den angegebenen Wert. In RStudio hat man aber zwei Alternativen, das Arbeitsverzeichnis auch mit der GUI zu setzen.
+Der Befehl `setwd("path/to/working/directory")` setzt das aktuelle Arbeitsverzeichnis auf den angegebenen Wert (im Beispiel das fiktive Verzeichnis `path/to/working/directory`). In RStudio hat man aber zwei Alternativen, das Arbeitsverzeichnis auch mit der GUI zu setzen.
 
 - Menü *Session* - *Set Working Directory* - *Choose Directory...*.
 - Navigieren zum gewünschten Verzeichnis im Bereich *Files* (rechts unten) und dann Klick auf *More* - *Set As Working Directory*.
 
-Bevor Sie ein Script ausführen, sollten Sie das Arbeitsverzeichnis korrekt setzten (meist auf das Verzeichnis, in dem das Script abgespeichert ist). Führen Sie dies allerdings nicht automatisiert im Script selbst durch, denn das Script soll auch auf anderen Umgebungen laufen, wo es Ihr spezifisches Verzeichnis vielleicht nicht gibt.
+Bevor Sie ein Script ausführen, sollten Sie das Arbeitsverzeichnis korrekt setzten (meist auf das Verzeichnis, in dem das Script abgespeichert ist). Führen Sie dies allerdings *nicht* automatisiert im Script selbst durch, denn das Script soll auch auf anderen Umgebungen laufen, wo es Ihr spezifisches Verzeichnis vielleicht nicht gibt.
 
 ### Workspace
-Alle selbst erstellten bzw. geladenen Objekte (Variablen und Daten) fasst man unter dem Begriff "Workspace" zusammen. Man kann ihn mit folgendem Befehl anzeigen:
+Alle selbst erstellten bzw. geladenen Objekte (Variablen und Daten) fasst man unter dem Begriff *Workspace* zusammen. Man kann ihn mit folgendem Befehl anzeigen:
 
 ```{r}
 ls()
@@ -142,16 +126,38 @@ ls()
 In RStudio werden diese Objekte auch im Bereich *Environment* angezeigt (standardmäßig rechts oben).
 
 ### Syntax
-Im Beispiel oben sieht man schon einmal die grundlegende Syntax (Regeln) von R. Prinzipiell wird jeder Befehl in eine extra Zeile geschrieben. Kommentare, d.h. Zeilen ab dem `#`-Zeichen, werden nicht ausgeführt.
+Rufen wir uns nochmal das kurze Beispielscript von vorher in Erinnerung:
+
+```{r eval=FALSE}
+# compute sum of integers from 1 to 100
+n <- 100
+x <- 1:n  #  numbers from 1 to 100
+sum(x)
+n * (n + 1) / 2  # closed-form solution
+```
+
+Man erkennt bereits in diesen wenigen Zeilen die grundlegende Syntax (Regeln) von R. Prinzipiell wird jeder Befehl in eine extra Zeile geschrieben. Kommentare, d.h. alle Zeichen ab dem `#`-Zeichen, werden nicht ausgeführt.
 
 #### Variablen
-Der Zuweisungsoperator lautet `<-`, damit kann man Werte Variablen zuweisen - z.B. wird mit `n <- 100` der Wert 100 der Variable `n` zugewiesen. Dies ist etwas gewöhnungsbedürftig, da die meisten Programmiersprachen dafür das Zeichen `=` verwenden. Allerdings kann man in R den Zuweisungsoperator auch in der umgekehrten Reihenfolge verwenden, z.B. `99 -> n` (dies wird in der Praxis aber kaum gemacht). Zusammenfassend kann man sich eine Variable als Name für einen bestimmten Wert vorstellen. Achtung: R unterscheidet streng zwischen Groß- und Kleinschreibung, d.h. die Variable `A` ist nicht gleich der Variable `a`! Neben Buchstaben können auch Ziffern, Unterstriche und Punkte für Variablennamen verwendet werden.
+Der Zuweisungsoperator lautet `<-`, damit kann man Werte Variablen zuweisen - z.B. wird mit `n <- 100` der Wert 100 der Variable `n` zugewiesen. Dies ist etwas gewöhnungsbedürftig, da die meisten Programmiersprachen dafür das Zeichen `=` verwenden. Achtung: R unterscheidet streng zwischen Groß- und Kleinschreibung, d.h. die Variable `A` ist nicht gleich der Variable `a`! Neben Buchstaben können auch Ziffern, Unterstriche und Punkte für Variablennamen verwendet werden.
 
 #### Funktionen
-Eine Funktion ist ein Mini-Programm, welches man durch Aufrufen ausführen kann. Im Beispiel oben ist `sum` eine Funktion. Zum Aufrufen einer Funktion ist ein Klammerpaar `()` nach dem Funktionsnamen zwingend notwendig. Argumente für Funktionen (die man benötigt, wenn die Funktion zusätzliche Informationen braucht) werden innerhalb dieser Klammern angegeben. Mehrere Argumente werden mit einem `,` getrennt. Zum Beispiel wird mit dem Befehl `sum(x)` die Funktion `sum` mit dem Argument `x` aufgerufen. Es gibt auch Funktionen, die keine Argumente benötigen - das runde Klammernpaar ist aber trotzdem notwendig, um die Funktion auch aufzurufen (z.B. `library()` ruft die Funktion `library` ohne Argumente auf).
+Eine Funktion ist ein Mini-Programm, welches man durch Aufrufen ausführen kann. Im Beispielscript ist `sum` eine Funktion. Zum Aufrufen einer Funktion ist ein Klammerpaar `()` nach dem Funktionsnamen zwingend notwendig. Argumente für Funktionen (die man benötigt, wenn die Funktion zusätzliche Informationen braucht) werden innerhalb dieser Klammern angegeben. Mehrere Argumente werden mit einem `,` getrennt. Zum Beispiel wird mit dem Befehl `sum(x)` die Funktion `sum` mit dem Argument `x` aufgerufen. Es gibt auch Funktionen, die keine Argumente benötigen - das runde Klammernpaar ist aber trotzdem notwendig, um die Funktion auch aufzurufen (z.B. `library()` ruft die Funktion `library` ohne Argumente auf). Weitere Beispiele für Funktionsaufrufe ohne Argumente, die wir bereits kennengelernt haben, sind `search()`, `help()`, `getwd()`, `dir()` und `ls()`.
 
 ### Hilfe
-Der Hilfetext für eine Funktion enthält alle notwendigen Details - wenn Sie eine neue Funktion verwenden möchten, ist ein Blick in die Hilfe sehr zu empfehlen. Sehen wir uns zum Beispiel die Hilfeseite der Funktion `mean` an (`?mean`). Nach einer kurzen *Description* sieht man unter *Usage* wie man die Funktion verwendet (aufruft). Hier ist zu lesen:
+R bietet eine sehr gute integrierte Hilfe zu allen möglichen Themen und Befehlen. In RStudio sind im Bereich *Help* alle möglichen Hilfethemen gruppiert - es bietet sich an, einmal in diesem Hilfefenster zu stöbern. Am häufigsten benötigt man Hilfe zu einem konkreten Befehl. Wenn man z.B. Informationen zum Befehl `mean` benötigt, gibt man in der Console folgenden Befehl ein:
+
+```{r}
+help(mean)
+```
+
+Alternativ und kürzer geht das mit:
+
+```{r}
+?mean
+```
+
+Der Hilfetext für eine Funktion enthält alle notwendigen Details - wenn Sie eine neue Funktion verwenden möchten, ist ein Blick in die Hilfe sehr zu empfehlen. Sehen wir uns zum Beispiel die Hilfeseite der Funktion `mean` an (`?mean` oder `help(mean)`). Nach einer kurzen Beschreibung (*Description*) sieht man unter *Usage* wie man die Funktion verwendet (aufruft). Hier ist zu lesen:
 
     mean(x, ...)
 
@@ -160,7 +166,7 @@ Gleich danach folgen diese beiden Zeilen für die Verwendung der Standardmethode
     ## Default S3 method:
     mean(x, trim = 0, na.rm = FALSE, ...)
 
-Hier sieht man also, dass die Funktion ein Argument `x` erwartet. Dieses Argument ist verpflichtend, d.h. wenn man es nicht angibt bekommt man eine Fehlermeldung. Dies sieht man am Hilfetext, weil kein Standardwert für `x` ersichtlich ist. Im Gegensatz dazu sind die nächsten beiden Argumente `trim` und `na.rm` optional, d.h. man muss sie nicht angeben, denn in diesem Fall werden deren Standardwerte verwendet (`trim` hat den Wert `0` und `na.rm` hat den Wert `FALSE` falls nicht anders angegeben).
+Hier erkennt man, dass die Funktion ein Argument `x` erwartet. Dieses Argument ist verpflichtend, d.h. wenn man es nicht angibt bekommt man eine Fehlermeldung (probieren Sie es in der Console aus, indem Sie `mean()` eintippen). Dies sieht man am Hilfetext, weil kein Standardwert für `x` ersichtlich ist. Im Gegensatz dazu sind die nächsten beiden Argumente `trim` und `na.rm` optional, d.h. man muss sie nicht angeben, denn in diesem Fall werden deren Standardwerte verwendet (`trim` hat den Wert `0` und `na.rm` hat den Wert `FALSE` falls nicht anders angegeben).
 
 Die Bedeutung der Argumente wird im Abschnitt *Arguments* genau beschrieben. Der Wert, der von der Funktion berechnet und zurückgegeben wird, wird im Abschnitt *Value* beschrieben. Danach folgen Literaturhinweise, verwandte Funktionen und schließlich ein paar Beispiele. Diese Beispiele kann man meistens einfach kopieren und in der Konsole auführen:
 
@@ -170,8 +176,8 @@ xm <- mean(x)
 c(xm, mean(x, trim = 0.10))
 ```
 
-### Beispiel
-Aufrufen kann man die Funktion mit entsprechenden Argumenten, indem man diese entweder in der richtigen Reihenfolge übergibt oder aber den Namen der Argumente und deren Werte explizit angibt. Sehen wir uns einige Beispiele für korrekte Aufrufe der Funktion `mean` an. Vorausgesetzt ist hier dass es eine Variable `x` gibt von deren Werten man den Mittelwert berechnen möchte.
+#### Beispiel
+Aufrufen kann man die Funktion mit entsprechenden Argumenten, indem man diese entweder in der richtigen Reihenfolge übergibt oder aber den Namen der Argumente und deren Werte explizit angibt. Sehen wir uns einige Beispiele für korrekte Aufrufe der Funktion `mean` an. Vorausgesetzt ist hier, dass es eine Variable `x` gibt, von deren Werten man den Mittelwert berechnen möchte.
 
 ```{r}
 x <- c(-14, 2, 3, 4, 5, 6, 7, 28, 99)
@@ -182,6 +188,17 @@ mean(x, na.rm=TRUE)  # x=x, trim=0, na.rm=TRUE
 mean(x, trim=0.2, na.rm=TRUE)  # x=x, trim=0.2, na.rm=TRUE
 mean(x=x, na.rm=TRUE, trim=0.3)  # x=x, trim=0.3, na.rm=TRUE
 mean(x, 0.2, na.rm=TRUE)  # x=x, trim=0.2, na.rm=TRUE
+```
+
+Anzumerken ist hier, dass der tatsächlich übergebene Wert nicht denselben Namen wie das Argument haben muss. Im obigen Beispiel ist dies zufälligerweise der Fall (sowohl das Funktionsargument als auch der übergebene Wert heißen `x`), aber das ist nicht erforderlich. Im Grunde sind nur die übergebenen Werte relevant, ob diese Werte einen Namen haben oder nicht spielt keine Rolle. D.h. man könnte `mean` auch wie folgt aufrufen:
+
+```{r}
+mean(c(-14, 2, 3, 4, 5, 6, 7, 28, 99))
+mean(x=c(-14, 2, 3, 4, 5, 6, 7, 28, 99))
+
+tmp <- c(-14, 2, 3, 4, 5, 6, 7, 28, 99)
+mean(tmp)
+mean(x=tmp)
 ```
 
 ## Literatur
@@ -213,21 +230,18 @@ mean(x, 0.2, na.rm=TRUE)  # x=x, trim=0.2, na.rm=TRUE
 Installieren Sie die Pakete `tidyverse`, `Hmisc` und `psych` - welche R-Befehle verwenden Sie dafür? Nennen Sie die Versionsnummern dieser beiden Pakete. Mit welchen Befehlen können Sie die installierten Pakete anschließend aktivieren?
 
 ### Übung 2
-Beschreiben Sie kurz den Verwendungszweck der soeben installierten Pakete (entnehmen Sie diese Information aus dem Hilfetext der Pakete - dazu müssen diese Pakete aktiviert sein).
-
-### Übung 3
 Zeigen Sie die Hilfe zum Befehl `help` an. Welche zwei Möglichkeiten haben Sie dafür?
 
-### Übung 4
+### Übung 3
 Erstellen Sie in RStudio ein einfaches Script mit dem Namen `my_first_script.R`. Fügen Sie folgende Elemente in dieses Script ein:
 
-- Eine Kommentarzeile mit dem Inhalt "Übung 5"
+- Eine Kommentarzeile mit dem Inhalt "Übung 3"
 - Aktivieren des Pakets `psych`
 - Berechnung des Mittelwerts der Zahlen 45, 66, 37, 54, 17 und 22 (nur mit Grundrechenarten)
 
 Das fertige Script sollte also aus drei Zeilen bestehen (Sie könnten und sollten zur Erhöhung der Übersichtlichkeit aber zusätzliche leere Zeilen einfügen).
 
-### Übung 5
+### Übung 4
 Installieren Sie das Paket `swirl`. Aktivieren Sie anschließend dieses Paket. Installieren Sie dann mit dem Befehl `install_from_swirl("Open Intro")` einen einführenden Kurs über statistische Grundbegriffe. Danach starten Sie das Lernprogramm mit der Funktion `swirl()`.
 
 Nach einigen Informationen über die Verwendung von `swirl` können Sie einen Kurs auswählen - wählen Sie "Open Intro". Es gibt nur eine Lektion namens "Overview of Statistics" - wählen Sie diese Lektion aus und schließen Sie diese Lektion komplett ab (die Dauer beträgt ungefähr 30 Minuten).
